src/Pastingv2Parser.java
// Generated from /home/alex/Documents/COMPILE/Pastingv2.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Pastingv2Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__14=1, T__13=2, T__12=3, T__11=4, T__10=5, T__9=6, T__8=7, T__7=8, T__6=9, 
		T__5=10, T__4=11, T__3=12, T__2=13, T__1=14, T__0=15, ASSIGN=16, GT=17, 
		LT=18, BANG=19, TILDE=20, QUESTION=21, COLON=22, EQUAL=23, LE=24, GE=25, 
		NOTEQUAL=26, AND=27, OR=28, INC=29, DEC=30, ADD=31, SUB=32, MUL=33, DIV=34, 
		BITAND=35, BITOR=36, CARET=37, MOD=38, OPAR=39, CPAR=40, OBRAC=41, CBRAC=42, 
		OCURL=43, CCURL=44, DQUOTE=45, SC=46, DT=47, ID=48, INT=49, WS=50, FLOAT=51, 
		COMMENT=52, STRING=53, CHAR=54;
	public static final String[] tokenNames = {
		"<INVALID>", "'mained'", "'breaked'", "'elsed'", "'cased'", "'printfed'", 
		"'fored'", "'switched'", "'whiled'", "'scanfed'", "'elseifed'", "'do'", 
		"'returned'", "'defaulted'", "','", "'ifed'", "'='", "'>'", "'<'", "'!'", 
		"'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
		"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'\"'", "';'", "DT", "ID", "INT", "WS", 
		"FLOAT", "COMMENT", "STRING", "CHAR"
	};
	public static final int
		RULE_prog = 0, RULE_main = 1, RULE_function = 2, RULE_mathOperators = 3, 
		RULE_relOperators = 4, RULE_cons = 5, RULE_varDecl = 6, RULE_funcDecl = 7, 
		RULE_expr = 8, RULE_assignExpression = 9, RULE_assignVal = 10, RULE_mathExpression = 11, 
		RULE_relExpression = 12, RULE_stat = 13, RULE_declStatement = 14, RULE_exprStatement = 15, 
		RULE_compStatement = 16, RULE_contStatement = 17, RULE_ioStatement = 18, 
		RULE_retStatement = 19, RULE_ifStatement = 20, RULE_elseIfStatement = 21, 
		RULE_elseStatement = 22, RULE_loopStatement = 23, RULE_whileStatement = 24, 
		RULE_doWhileStatement = 25, RULE_forStatement = 26, RULE_switchStatement = 27, 
		RULE_caseStatement = 28, RULE_defaultStatement = 29, RULE_printStatement = 30, 
		RULE_scanStatement = 31;
	public static final String[] ruleNames = {
		"prog", "main", "function", "mathOperators", "relOperators", "cons", "varDecl", 
		"funcDecl", "expr", "assignExpression", "assignVal", "mathExpression", 
		"relExpression", "stat", "declStatement", "exprStatement", "compStatement", 
		"contStatement", "ioStatement", "retStatement", "ifStatement", "elseIfStatement", 
		"elseStatement", "loopStatement", "whileStatement", "doWhileStatement", 
		"forStatement", "switchStatement", "caseStatement", "defaultStatement", 
		"printStatement", "scanStatement"
	};

	@Override
	public String getGrammarFileName() { return "Pastingv2.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public Pastingv2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(64); function();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(70); main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode DT() { return getToken(Pastingv2Parser.DT, 0); }
		public TerminalNode CPAR() { return getToken(Pastingv2Parser.CPAR, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode OPAR() { return getToken(Pastingv2Parser.OPAR, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(DT);
			setState(73); match(1);
			setState(74); match(OPAR);
			setState(75); match(CPAR);
			setState(76); stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public Token datatype;
		public Token name;
		public VarDeclContext param;
		public StatContext code;
		public TerminalNode ID() { return getToken(Pastingv2Parser.ID, 0); }
		public TerminalNode DT() { return getToken(Pastingv2Parser.DT, 0); }
		public TerminalNode CPAR() { return getToken(Pastingv2Parser.CPAR, 0); }
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode OPAR() { return getToken(Pastingv2Parser.OPAR, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78); ((FunctionContext)_localctx).datatype = match(DT);
			setState(79); ((FunctionContext)_localctx).name = match(ID);
			setState(80); match(OPAR);
			setState(81); ((FunctionContext)_localctx).param = varDecl();
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(82); match(14);
					setState(83); varDecl();
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(89); match(CPAR);
			setState(90); ((FunctionContext)_localctx).code = stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathOperatorsContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(Pastingv2Parser.SUB, 0); }
		public TerminalNode ADD() { return getToken(Pastingv2Parser.ADD, 0); }
		public TerminalNode DIV() { return getToken(Pastingv2Parser.DIV, 0); }
		public TerminalNode MUL() { return getToken(Pastingv2Parser.MUL, 0); }
		public MathOperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathOperators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterMathOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitMathOperators(this);
		}
	}

	public final MathOperatorsContext mathOperators() throws RecognitionException {
		MathOperatorsContext _localctx = new MathOperatorsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mathOperators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << MUL) | (1L << DIV))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelOperatorsContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(Pastingv2Parser.EQUAL, 0); }
		public TerminalNode GE() { return getToken(Pastingv2Parser.GE, 0); }
		public TerminalNode LT() { return getToken(Pastingv2Parser.LT, 0); }
		public TerminalNode GT() { return getToken(Pastingv2Parser.GT, 0); }
		public TerminalNode LE() { return getToken(Pastingv2Parser.LE, 0); }
		public TerminalNode AND() { return getToken(Pastingv2Parser.AND, 0); }
		public TerminalNode OR() { return getToken(Pastingv2Parser.OR, 0); }
		public TerminalNode NOTEQUAL() { return getToken(Pastingv2Parser.NOTEQUAL, 0); }
		public RelOperatorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relOperators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterRelOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitRelOperators(this);
		}
	}

	public final RelOperatorsContext relOperators() throws RecognitionException {
		RelOperatorsContext _localctx = new RelOperatorsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relOperators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << LT) | (1L << EQUAL) | (1L << LE) | (1L << GE) | (1L << NOTEQUAL) | (1L << AND) | (1L << OR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Pastingv2Parser.ID, 0); }
		public TerminalNode STRING() { return getToken(Pastingv2Parser.STRING, 0); }
		public TerminalNode CHAR() { return getToken(Pastingv2Parser.CHAR, 0); }
		public TerminalNode INT() { return getToken(Pastingv2Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(Pastingv2Parser.FLOAT, 0); }
		public ConsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cons; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterCons(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitCons(this);
		}
	}

	public final ConsContext cons() throws RecognitionException {
		ConsContext _localctx = new ConsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cons);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public Token data;
		public Token id;
		public List<TerminalNode> ID() { return getTokens(Pastingv2Parser.ID); }
		public List<AssignExpressionContext> assignExpression() {
			return getRuleContexts(AssignExpressionContext.class);
		}
		public AssignExpressionContext assignExpression(int i) {
			return getRuleContext(AssignExpressionContext.class,i);
		}
		public TerminalNode DT() { return getToken(Pastingv2Parser.DT, 0); }
		public TerminalNode ID(int i) {
			return getToken(Pastingv2Parser.ID, i);
		}
		public TerminalNode INT() { return getToken(Pastingv2Parser.INT, 0); }
		public TerminalNode OBRAC() { return getToken(Pastingv2Parser.OBRAC, 0); }
		public TerminalNode CBRAC() { return getToken(Pastingv2Parser.CBRAC, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitVarDecl(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98); ((VarDeclContext)_localctx).data = match(DT);
			setState(106);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(99); ((VarDeclContext)_localctx).id = match(ID);
				setState(103);
				_la = _input.LA(1);
				if (_la==OBRAC) {
					{
					setState(100); match(OBRAC);
					setState(101); match(INT);
					setState(102); match(CBRAC);
					}
				}

				}
				break;

			case 2:
				{
				setState(105); assignExpression();
				}
				break;
			}
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(108); match(14);
					setState(111);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(109); match(ID);
						}
						break;

					case 2:
						{
						setState(110); assignExpression();
						}
						break;
					}
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDeclContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(Pastingv2Parser.ID); }
		public TerminalNode CPAR() { return getToken(Pastingv2Parser.CPAR, 0); }
		public TerminalNode ID(int i) {
			return getToken(Pastingv2Parser.ID, i);
		}
		public TerminalNode OPAR() { return getToken(Pastingv2Parser.OPAR, 0); }
		public FuncDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterFuncDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitFuncDecl(this);
		}
	}

	public final FuncDeclContext funcDecl() throws RecognitionException {
		FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcDecl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(ID);
			setState(119); match(OPAR);
			{
			setState(120); match(ID);
			{
			setState(121); match(14);
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(122); match(ID);
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
			}
			setState(128); match(CPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public MathExpressionContext mathExpression() {
			return getRuleContext(MathExpressionContext.class,0);
		}
		public AssignExpressionContext assignExpression() {
			return getRuleContext(AssignExpressionContext.class,0);
		}
		public RelExpressionContext relExpression() {
			return getRuleContext(RelExpressionContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr);
		try {
			setState(133);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); assignExpression();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); mathExpression();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132); relExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignExpressionContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(Pastingv2Parser.ASSIGN, 0); }
		public TerminalNode ID() { return getToken(Pastingv2Parser.ID, 0); }
		public AssignValContext assignVal() {
			return getRuleContext(AssignValContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public AssignExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterAssignExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitAssignExpression(this);
		}
	}

	public final AssignExpressionContext assignExpression() throws RecognitionException {
		AssignExpressionContext _localctx = new AssignExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			switch (_input.LA(1)) {
			case DT:
				{
				setState(135); varDecl();
				}
				break;
			case ID:
				{
				setState(136); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(139); match(ASSIGN);
			setState(140); assignVal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignValContext extends ParserRuleContext {
		public MathExpressionContext mathExpression() {
			return getRuleContext(MathExpressionContext.class,0);
		}
		public List<ConsContext> cons() {
			return getRuleContexts(ConsContext.class);
		}
		public TerminalNode OCURL() { return getToken(Pastingv2Parser.OCURL, 0); }
		public TerminalNode CCURL() { return getToken(Pastingv2Parser.CCURL, 0); }
		public ConsContext cons(int i) {
			return getRuleContext(ConsContext.class,i);
		}
		public TerminalNode INT() { return getToken(Pastingv2Parser.INT, 0); }
		public AssignValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterAssignVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitAssignVal(this);
		}
	}

	public final AssignValContext assignVal() throws RecognitionException {
		AssignValContext _localctx = new AssignValContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assignVal);
		try {
			int _alt;
			setState(155);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142); match(OCURL);
				{
				{
				setState(143); cons();
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=1 && _alt!=-1 ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(144); match(14);
						setState(145); cons();
						}
						} 
					}
					setState(150);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				setState(151); match(CCURL);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153); mathExpression();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(154); match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathExpressionContext extends ParserRuleContext {
		public Token left;
		public Token right;
		public TerminalNode INT(int i) {
			return getToken(Pastingv2Parser.INT, i);
		}
		public List<TerminalNode> ID() { return getTokens(Pastingv2Parser.ID); }
		public MathOperatorsContext mathOperators() {
			return getRuleContext(MathOperatorsContext.class,0);
		}
		public TerminalNode ID(int i) {
			return getToken(Pastingv2Parser.ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(Pastingv2Parser.INT); }
		public MathExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).enterMathExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pastingv2Listener ) ((Pastingv2Listener)listener).exitMathExpression(this);
		}
	}

	public final MathExpressionContext mathExpression() throws RecognitionException {
		MathExpressionContext _localctx = new MathExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mathExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			((MathExpressionContext)_localctx).left = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT) ) {
				((MathExpressionContext)_localctx).left = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(158); mathOperators();
			setState(159);
			((MathExpressionContext)_localctx).right = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT) ) {
				((MathExpressionContext)_localctx).right = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
